added button,h1 tag

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
                 <h6>Already account <a href="#">Login <i class="fa-solid fa-right-to-bracket"></i></a></h6>
                 <h6><a href="#">Forgot Password <i class="fa-solid fa-lock"></i></a></h6>
             </form>
+            <h1>I HAVE ADDED NEW LINE</h1>
+            <button>09/17/2024</button>
         </div>
     </section>
 </body>
